Add BikeSaleMapper and refactor BikeSaleService to use it for DTO conversions